# aLite

./: .gitignore  CMakeLists.txt  README.md  main.cpp
aLiteLib/Context/: Context.cpp  Context.h
aLiteLib/Context/Camera/: Camera.cpp  Camera.h  Setting.h
aLiteLib/Context/Device/: Device.cpp  Device.h  Settings.h
aLiteLib/Context/Event/: Event.cpp  Event.h
aLiteLib/Context/Window/: Settings.h  Window.cpp  Window.h
aLiteLib/Render/Buffers/: Settings.h  VertexArrayBuffer.cpp  VertexArrayBuffer.h  VertexArrayBuffer.inl  VertexBuffer.h  VertexBuffer.inl
aLiteLib/Render/Resources/: Shader.cpp  Shader.h
aLiteLib/Render/Resources/Loaders/: ShaderLoader.cpp  ShaderLoader.h
aLiteLib/Utils/: BasicGeo.h  Foreach.h  Logger.h
libraries/include/GLFW/: glfw3.h
libraries/include/glad/: glad.h
libraries/include/glm/ext/: matrix_clip_space.hpp  matrix_clip_space.inl  matrix_projection.hpp
libraries/include/stb_image/: stb_image.cpp  stb_image.h
libraries/lib/: glfw3dll.lib
libraries/src/: glad.c
resources/shaders/default/: frag.frag  vert.vert
